--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,8 @@
-test {{outlet}}
+<h2 style="text-align: center"> {{randomize model.colors}} {{randomize model.nouns}} </h2>
+<h2 style="text-align: center"> {{randomize model.colors}} {{randomize model.nouns}} </h2>
+<h2 style="text-align: center"> {{randomize model.colors}} {{randomize model.nouns}} </h2>
+<h2 style="text-align: center"> {{randomize model.colors}} {{randomize model.nouns}} </h2>
+<h2 style="text-align: center"> {{randomize model.colors}} {{randomize model.nouns}} </h2>
+<h2 style="text-align: center"> {{randomize model.colors}} {{randomize model.nouns}} </h2>
+<h2 style="text-align: center"> {{randomize model.colors}} {{randomize model.nouns}} </h2>
+{{outlet}}
